src/public/css/about.less
//about page

.developers {
background: #40AA54;
height: 700px;
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;


  img {
    width: 250px;
    border-radius: 100%;
  }
  figure {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: #fec901;
    margin: 10px;
    border-top-left-radius: 130px;
    border-top-right-radius: 130px;

    a {
      font-size: 25px;
    }
  }

  h1 {
    margin-bottom: 20px;
    font-family: SB;
  }
}

.developers-img {
  display: flex;
  justify-content: center;
  align-items: center;
}

.admin-name {
  color: #222;

  &:hover {
    color: #333;
  }
}

.qomosc-admin {
  margin-top: -20px;
  height: 700px;
  background: #fec901;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  h1 {
    font-family: SB;
    margin-bottom: 20px;

    font-size: 50px;
  }

  figure {
    background: #40AA54;
    border-top-left-radius: 150px;
    border-top-right-radius: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;

    img {
      width: 300px;
      border-radius: 100%;
      margin-bottom: 8px;
    }
  }
  a {
    font-family: SB;
    font-size: 25px;
    cursor: pointer;
  }
}

.admin-name {
  font-family: SB;
  font-size: 17px;
}

.admin-description {
  font-size: 15px;
  color: #333;
}

.content {
  margin: 20px 20%;
}

.icons {
  a {
    color: #222;

    &:hover {
      color: black;
    }
  }
}
.contributor-name {
  font-size: 16px;
  font-family: SB;
  color: black;

  &:hover {
    text-decoration: underline;
  }
}

.contributor-icon {
  font-size: 20px;
  color: #333;

  &:hover, &:active {
    color: black;
  }
}

.content-of-about-us {
  background: #fff;
  width: 80%;
  margin: auto;
  padding: 20px;
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  border: solid 1px #ccc;
}

//////////////////// contact page /////////////////////////
.contact-container {
  display: flex;
  justify-content: space-between;
  width: 85%;
  margin: auto;
  padding: 10px;
}

.contact-form {
  width: 50%;
  background: #fff;
  margin: 10px;
  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 20px;
  border: 1px solid #eee;
  border-radius: 3px;
  box-shadow: 0 12px 27px 0 rgba(0,0,0,.06);
  display: flex;
  flex-direction: column;
  align-items: center;


.contact-info {
 color: #003662;
 padding: 20px;

  span {
    border-bottom: solid #40AA54 1px;
    padding:5px 15px;
    margin-bottom: 10px;
  }

  p {
    margin-top: 10px;
    padding: 5px;
    text-align:justify;
    font-size: 14px;
  }
}

}

.left-col-contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px;
  color: #003662;
}

.contact-us {
  background: #fff;
  border: 1px solid #eee;
  border-radius: 3px;
  box-shadow: 0 12px 27px 0 rgba(0,0,0,.06);
  padding: 20px 5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  line-height: 3em;

  .mail-time {
    display: flex;
    justify-content: space-between;

    a {
      color:#123365;
      margin-left: 50px;
    }
  }

  p {
    font-size: 15px;
    line-height: 2em;
    text-align: justify;
  }
}

  div#map {
    margin: 10px;
    width: 100%;
    height: 400px;
    background-color: grey;
    border: 1px solid #eee;
    border-radius: 3px;
    box-shadow: 0 12px 27px 0 rgba(0,0,0,.06);
  }


@media (min-width: 120px) and (max-width: 500px) {
.content-of-about-us {
  width: 85%;

  .content {
    margin:5px 6%;
  }
}
.developers {
  height: 900px;
}

.developers-img {
  flex-direction: column;
}

.about-all {
  padding: 5px;
}

.contact-container {
  flex-direction: column;
  width: 98%;
  padding: 0;
}

.contact-form {
  width: 97%;
  margin: auto;
  padding: 5px;
}

.contact-us {
  padding: 5px 10px;
  text-align: center;
}

.mail-time {
  flex-direction: column;
  align-items: center;
  text-align: center;

  a {
    margin: 0 0 0 0;
    text-align: center;
  }
}

.left-col-contact {
  width: 97%;
  margin: 10px auto;
}

}

